force-app/main/default/objects/cf_Checklist_Item_Template__c/cf_Checklist_Item_Template__c.object-meta.xml
<CustomObject>
    <description>This object will contain the various checklist item template records.</description>
    <label>Checklist Item Template</label>
    <nameField>
        <label>Checklist Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Item Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>