force-app/main/default/objects/cf_Checklist_Item_Template__c/fields/Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Template</label>
    <referenceTo>cf_Checklist_Template__c</referenceTo>
    <relationshipLabel>Checklist Item Template</relationshipLabel>
    <relationshipName>Checklist_Item_Template</relationshipName>
    <type>Lookup</type>
</CustomField>