force-app/main/default/objects/cf_Checklist_Item_Template__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Executing User whom checked the Checklist Item as Completed.</description>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Item_Completed_By</relationshipName>
    <type>Lookup</type>
</CustomField>