force-app/main/default/objects/cf_Checklist_Item_Template__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Display name of the checklist item</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>